<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Second"
    android:orientation="vertical"
    android:weightSum="100">


    <LinearLayout
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/top_bottomColor">


        <TextView
            android:id="@+id/tvXX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvXX"
            android:textColor="@color/txtColor"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/tvYY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvYY"
            android:textColor="@color/txtColor"
            android:textSize="25sp" />


    </LinearLayout>



    <LinearLayout
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">


        <Button
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:id="@+id/btnVoice"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:onClick="doAction"
            android:background="@drawable/voice"/>

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvQuestion"
            android:textColor="@color/txtColor"
            android:textSize="22sp"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tvAnswer"
                    android:textColor="@color/txtColor"
                    android:textSize="25sp" />


            </LinearLayout>


        </ScrollView>


    </LinearLayout>




    <LinearLayout
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/top_bottomColor">


        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/previous"
            android:onClick="doAction"
            tools:ignore="OnClick" />


        <Button
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/btnAnswer"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/answer_p"
            android:onClick="doAction"
            tools:ignore="OnClick" />


        <Button
            android:id="@+id/btnNext"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/next"
            android:onClick="doAction"
            tools:ignore="OnClick"/>


    </LinearLayout>




</LinearLayout>